--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ mpmath==1.3.0
 multidict==6.4.4
 networkx==3.4.2
 numba==0.61.2
-numpy==1.26.4
+numpy<2.3
 omegaconf==2.3.0
 openai-whisper==20240930
 opencv-python==4.11.0.86
@@ -159,3 +159,4 @@ uv==0.7.9
 wget==3.2
 wrapt==1.17.2
 yarl==1.20.0
+PySide6
