--- a/requirements.txt
+++ b/requirements.txt
@@ -63,6 +63,7 @@ more-itertools==10.7.0
 mpmath==1.3.0
 multidict==6.4.4
 networkx==3.4.2
+moviepy==1.0.3
 numba==0.61.2
 numpy==1.26.4
 omegaconf==2.3.0
