--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -31,13 +31,16 @@ jobs:
           mkdir -p assets
           curl -L "https://raw.githubusercontent.com/pyinstaller/pyinstaller/v6.9.0/PyInstaller/bootloader/images/icon-windowed.icns" -o "assets/logo.icns"
 
-      # --- NEW: Download and prepare FFmpeg ---
+      # --- CORRECTED: Download and prepare FFmpeg ---
       - name: Download and prepare FFmpeg
         run: |
           mkdir -p bin
-          curl -L "https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-n5.1-latest-macos64-gpl-5.1.zip" -o ffmpeg.zip
+          # Using a stable 'latest' release from the yt-dlp/FFmpeg-Builds project, which is reliable.
+          # The -L flag is crucial to follow the redirect from the 'latest' tag.
+          curl -L "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-macos-x86_64.zip" -o ffmpeg.zip
           unzip ffmpeg.zip
-          mv ffmpeg-n5.1-latest-macos64-gpl-5.1/bin/ffmpeg bin/ffmpeg
+          # The ffmpeg binary is at the root of this specific zip archive.
+          mv ffmpeg bin/ffmpeg
 
       - name: Install dependencies
         run: |
