--- a/requirements.txt
+++ b/requirements.txt
@@ -139,13 +139,14 @@ tiktoken==0.9.0
 timm==1.0.15
 tokenizers==0.21.1
 toml==0.10.2
-torch==2.3.1
+# --- THE FIX: Un-pin torch and its relatives ---
+torch
 torch-audiomentations==0.12.0
 torch_pitch_shift==1.2.5
-torchaudio==2.3.1
+torchaudio
 torchmetrics==1.7.1
 torchsde==0.2.6
-torchvision==0.18.1
+torchvision
 tqdm==4.67.1
 trampoline==0.1.2
 transformers==4.52.4
