--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -42,14 +42,14 @@ jobs:
           pip install -r requirements.txt
 
       - name: Build with PyInstaller
-        run: pyinstaller TranscriptionOli.spec
+        run: pyinstaller AutoVerse.spec
 
       - name: Zip the output folder
-        run: Compress-Archive -Path dist/TranscriptionOli_App -DestinationPath dist/TranscriptionOli_Windows.zip
+        run: Compress-Archive -Path dist/AutoVerse_App -DestinationPath dist/AutoVerse_Windows.zip
         shell: powershell
         
       - name: Upload Executable Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: TranscriptionOli-Windows-App
-          path: dist/TranscriptionOli_Windows.zip
+          name: AutoVerse-Windows-App
+          path: dist/AutoVerse_Windows.zip
